# chico

./: .gitignore  Cargo.toml  README.markdown  clippy.toml
.github/workflows/: release.yml  rust.yml
src/: lib.rs  main.rs
src/modules/: +  binary.rs  cli.rs  error.rs  hexadecimal.rs  mod.rs  octal.rs  tests.rs  utils.rs
