[package]
name = "chico"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Angel Dollface <angelbbe@proton.me>"]
description= "A tiny library to work with base-10, base-16, and base-2 numbers in Rust!"
homepage = "https://github.com/angeldollface/chico"
repository = "https://github.com/angeldollface/chico"
documentation = "https://docs.rs/chico/0.1.0"
readme = "README.markdown"
keywords = [
    "mathematics",
    "hexadecimal",
    "binary"
]
categories = [
    "mathematics",
    "hexadecimal",
    "binary"
]
exclude = [
    "/.github"
]